# rules_njk

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml
build_defs/: BUILD.bazel  example.njk  library.njk  njk_template.bzl  transitive.njk
goldens/: golden_test.bzl
renderer/: BUILD.bazel  loader.ts  loader_test.ts  renderer.ts  renderer_e2e_test.ts  renderer_test.ts
