load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "renderer_lib",
    srcs = ["renderer.ts"],
    tsconfig = "//:tsconfig",
    source_map = True,
    deps = ["@npm//@types/node"],
)

nodejs_binary(
    name = "renderer",
    entry_point = ":renderer.js",
)
