load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")

ts_project(
    name = "renderer_lib",
    srcs = ["renderer.ts"],
    tsconfig = "//:tsconfig",
    source_map = True,
    deps = [
        "@npm//@types/node",
        "@npm//@types/nunjucks",
        "@npm//@types/yargs",
    ],
)

nodejs_binary(
    name = "renderer",
    entry_point = ":renderer.js",
    visibility = ["//visibility:public"],
    data = [
        "@npm//nunjucks",
        "@npm//yargs",
    ],
)

ts_project(
    name = "renderer_test_lib",
    srcs = ["renderer_test.ts"],
    tsconfig = "//:tsconfig",
    source_map = True,
    testonly = True,
    deps = [
        "@npm//@types/jasmine",
        "@npm//@types/node",
    ],
)

jasmine_node_test(
    name = "renderer_test",
    data = [":renderer"],
    deps = [":renderer_test_lib"],
)
